# cowsay-django

./: README.md  manage.py  mkdocs.yml  pyproject.toml  pyproject2.toml
.github/workflows/: gh-pages.yml  test.yml
_github/: README.md
_github/workflows/: gh-pages.yml  test-codecov-1.yml  test-coveralls.yml
docs/: docs.md  index.md  making-of.md  mypy.md  testing.md
mycowsay/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mycowsay/templates/: index.html
src/cowsay_django/: __about__.py
src/cowsay_django/cowsayer/: apps.py
src/cowsay_django/cowsayer/templatetags/: cowsay_tags.py
stubs/cowsay/: __init__.pyi  characters.pyi  main.pyi
tests/: test_dummy.py  test_tag.py
