[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowsay-django"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kfields", email = "kurtisfields@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django >=3.2,<6.0",
  "cowsay >=6.1"
]

[project.urls]
Documentation = "https://github.com/unknown/cowsay-django#readme"
Issues = "https://github.com/unknown/cowsay-django/issues"
Source = "https://github.com/unknown/cowsay-django"

[tool.hatch.version]
path = "src/cowsay_django/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.2",
  "pytest",
  "pytest-cov",
  "pytest-asyncio >=0.21.0",
  "pytest-django ~=4.5.2",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
django = ["3.2.25", "4.1.13", "4.2.11"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]
django = ["5.0.3"]

[tool.hatch.envs.test]
extra-dependencies = [
  "Django=={matrix:django}",
]

# Coverage
[tool.hatch.envs.coverage]
detached = true
dependencies = [
  "coverage[toml]>=6.2",
  "lxml",
]
[tool.hatch.envs.coverage.scripts]
combine = "coverage combine {args}"
report-xml = "coverage xml"
report-uncovered-html = "coverage html --skip-covered --skip-empty"

# Types
[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "django-stubs[compatible-mypy]"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cowsay_django tests}"

# Docs

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs >=1.5.3",
  "mkdocs-material >=9.5.15",
  "mkdocs-minify-plugin >=0.8.0",
  "pymdown-extensions >=10.7.1",
  "Markdown >=3.6",
]

[tool.hatch.envs.docs.scripts]
build = [
  "mkdocs build",
]
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"

# Coverage

[tool.coverage.run]
source_pkgs = ["cowsay_django", "tests"]
branch = true
#parallel = true
omit = [
  "src/cowsay_django/__about__.py",
]

[tool.coverage.paths]
cowsay_django = ["src/cowsay_django", "*/cowsay-django/src/cowsay_django"]
tests = ["tests", "*/cowsay-django/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "./stubs"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mycowsay.settings"

